crates/fe/tests/fixtures/cli_output/ingots/duplicate_toml_keys/duplicate_toml_keys.snap
---
source: crates/fe/tests/cli_output.rs
expression: output
---
=== STDERR ===
❌ Invalid fe.toml file in ingot file://<project>/crates/fe/tests/fixtures/cli_output/ingots/duplicate_toml_keys/: TOML parse error at line 3, column 1
  |
3 | name = "duplicate"
  | ^
duplicate key `name` in table `ingot`


=== EXIT CODE: 1 ===
